@@ -1,0 +1,42 @@
+#!/bin/sh
+#
+# Folding@Home WU submited
+#
+# Parameters:
+#
+#   config   (required)
+#   autoconf (optional - only used by munin-config)
+#
+# Magic markers (optional - used by munin-config and some installation
+# scripts):
+#%# family=contrib
+#%# capabilities=autoconf
+
+statefile=@@PLUGSTATE@@/plugin-fah_wu.state
+
+if [ "$1" = "autoconf" ]; then
+    echo yes
+    exit 0
+fi
+
+if [ "$1" = "config" ]; then
+
+    echo 'graph_title Folding@Home Working Units submited'
+    echo 'graph_args -l 0 --base 1000'
+    echo 'graph_vlabel WU done'
+    echo 'wu.label WU'
+    echo 'wu.type GAUGE'
+    exit 0
+fi
+
+wu=`wget "http://vspx27.stanford.edu/cgi-bin/main.py?qtype=userpage&username=8d" -q -t 1 -T 5 -O - | egrep -A 2 "<TD> WU</TD>" | grep "<b>" | sed 's/.*<b> \([0-9]*\) .*/\1/'`
+
+if [ "$wu" == "" ]; then
+	if [ -f $statefile ]; then
+		echo wu.value `cat $statefile`
+	fi
+else
+	echo $wu > $statefile
+	echo wu.value $wu
+fi
+
